2012-02-15 S. Thiell <stephane.thiell@cea.fr>

	* NodeUtils.py: Add groupsdir option (ticket #179).

2012-02-14 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Nodeset.py: Add --contiguous splitting option (ticket #173).

	* NodeSet.py: Add contiguous() iterator.

	* RangeSet.py: Add contiguous() iterator.

	* RangeSet.py: Allow slice object in fromone() constructor.

2012-02-26 S. Thiell <stephane.thiell@cea.fr>

	* Gateway.py: Improved logging facility, configurable through
	CLUSTERSHELL_GW_LOG_DIR and CLUSTERSHELL_GW_LOG_LEVEL environment
	variables from the root node.

	* Communication.py: Messages are now transfered in xml payload instead of
	'output' attribute for improved handling of multi-lines messages in
	StdOutMessage and StdErrMessage.

2012-02-24 S. Thiell <stephane.thiell@cea.fr>

	* Worker/EngineClient.py: Fix gateway write performance issue, as seen on a
	very large cluster with a no-grooming test case and lots of small messages
	sent, by calling os.write() as soon as possible (might safely fail if not
	ready as we are in non-blocking mode).

	* NodeSet.py: Internal parsing optimization by adding a "should copy
	RangeSet object?" flag to NodeSetBase constructor in order to save useless
	but slightly costly RangeSet.copy() calls.

	* NodeSet.py: Small rangeset parsing optimization on single node string
	parsing code.

2012-02-19 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Add NodeSet.nsiter(), a fast iterator on nodes as NodeSet
	objects to avoid object-to-string-to-object conversion in some cases when
	using __iter__() -- like in PropagationTreeRouter.dispatch().

2012-02-15 S. Thiell <stephane.thiell@cea.fr>

	* Clush.py: Add --topology <file> hidden option to enable V2 tree
	propagation technology preview.

2012-02-01 S. Thiell <stephane.thiell@cea.fr>

	* RangeSet.py: Fix RangeSet.__setstate__() for proper object unpickling
	from older RangeSet versions. Add unpickling tests.

2012-01-28 S. Thiell <stephane.thiell@cea.fr>
