@@ -41,8 +41,9 @@ rm -rf %{buildroot}
 %{__python} setup.py install -O1 --skip-build --root %{buildroot}
 
 # config files
-install -d %{buildroot}/%{_sysconfdir}/clustershell
-install -p -m 0644 conf/*.conf %{buildroot}/%{_sysconfdir}/clustershell/
+install -d %{buildroot}/%{_sysconfdir}/clustershell/groups.conf.d
+install -p -m 0644 conf/*.conf conf/groups %{buildroot}/%{_sysconfdir}/clustershell/
+install -p -m 0644 conf/groups.conf.d/README conf/groups.conf.d/*.conf.example %{buildroot}/%{_sysconfdir}/clustershell/groups.conf.d
 
 # man pages
 install -d %{buildroot}/%{_mandir}/{man1,man5}
@@ -73,7 +74,11 @@ rm -rf %{buildroot}
 %{_mandir}/man5/groups.conf.5*
 %dir %{_sysconfdir}/clustershell
 %config(noreplace) %{_sysconfdir}/clustershell/clush.conf
+%config(noreplace) %{_sysconfdir}/clustershell/groups
 %config(noreplace) %{_sysconfdir}/clustershell/groups.conf
+%dir %{_sysconfdir}/clustershell/groups.conf.d
+%doc %{_sysconfdir}/clustershell/groups.conf.d/README
+%doc %{_sysconfdir}/clustershell/groups.conf.d/*.conf.example
 %{python_sitelib}/ClusterShell/
 %{python_sitelib}/ClusterShell-*-py?.?.egg-info
 %{_bindir}/clubak
