@@ -1,5 +1,7 @@
+adm: example0
 oss: example4 example5
 mds: example6
 io: example[4-6]
 compute: example[32-159]
 gpu: example[156-159]
+all: example[4-6,32-159]
