@@ -1,25 +1,22 @@
-# Configuration file for ClusterShell node groups
-# This is an example file, please edit to fit your needs!
+# ClusterShell node groups primary configuration file
 #
-# Please see man groups.conf(5).
+# Please see `man 5 groups.conf` for further details.
 #
 
+# NOTE: This is a simple group configuration example file, not a
+#       default config file. Please edit it to fit your own needs.
+#
 [Main]
+# Default group source
 default: local
+# Uncomment the next line to enable additional group source config files:
+#groupsdir: /etc/clustershell/groups.conf.d
 
+
+# EXAMPLE: flat file group source
 [local]
 map: awk -F: '/^$GROUP:/ {print $2}' /etc/clustershell/groups
 all: awk -F: '/^all:/ {print $2}' /etc/clustershell/groups
 list: awk -F: '/^[[:alnum:]_]/ {print $1}' /etc/clustershell/groups
 
-[genders]
-map: nodeattr -n $GROUP
-all: nodeattr -n ALL
-list: nodeattr -l
-
-[slurm]
-map: sinfo -h -o "%N" -p $GROUP
-all: sinfo -h -o "%N"
-list: sinfo -h -o "%P"
-reverse: sinfo -h -N -o "%P" -n $NODE
-
+# Other examples of group sources are now available in groups.conf.d/
