@@ -16,6 +16,7 @@ syn case ignore
 syn match groupsDefaultValue "\(:\|=\)\s*\w\+$"ms=s+1 contained
 syn match groupsColonValue "\(:\|=\).*" contained contains=groupsDefaultValue
 syn match groupsDefaultKey "^default\(:\|=\).*$" contains=groupsColonValue
+syn match groupsGroupsDirKey "^groupsdir\(:\|=\)"
 
 " Sources
 syn match groupsVars "\(\$GROUP\|\$NODE\)" contained
@@ -43,6 +44,7 @@ if version >= 508 || !exists("did_groupsconf_syntax_inits")
   HiLink groupsComment		Comment
   HiLink groupsMainHeader	Constant
   HiLink groupsDefaultKey	Identifier
+  HiLink groupsGroupsDirKey	Identifier
   HiLink groupsDefaultValue	Special
   HiLink groupsKeys		Identifier
   HiLink groupsVars		Keyword
