@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# Copyright CEA/DAM/DIF (2008, 2009, 2010, 2011)
+# Copyright CEA/DAM/DIF (2008, 2009, 2010, 2011, 2012)
 #  Contributor: Stephane THIELL <stephane.thiell@cea.fr>
 #
 # This file is part of the ClusterShell library. 
@@ -54,6 +54,7 @@ install -d $TMPDIR/lib/ClusterShell/Engine
 install -d $TMPDIR/lib/ClusterShell/Worker
 install -d $TMPDIR/scripts
 install -d $TMPDIR/conf
+install -d $TMPDIR/conf/groups.conf.d
 install -d $TMPDIR/doc/epydoc
 install -d $TMPDIR/doc/extras/vim/{ftdetect,syntax}
 install -d $TMPDIR/doc/man/{man1,man5}
@@ -70,7 +71,9 @@ install -p -m 0755 scripts/clubak.py $TMPDIR/scripts/
 install -p -m 0755 scripts/clush.py $TMPDIR/scripts/
 install -p -m 0755 scripts/nodeset.py $TMPDIR/scripts/
 install -p -m 0644 conf/clush.conf $TMPDIR/conf/
-install -p -m 0644 conf/groups.conf $TMPDIR/conf/
+install -p -m 0644 conf/groups conf/groups.conf $TMPDIR/conf/
+install -p -m 0644 conf/groups.conf.d/README $TMPDIR/conf/groups.conf.d/
+install -p -m 0644 conf/groups.conf.d/*.conf.example $TMPDIR/conf/groups.conf.d/
 install -p -m 0644 doc/epydoc/clustershell_epydoc.conf $TMPDIR/doc/epydoc/
 install -p -m 0644 doc/extras/vim/ftdetect/clustershell.vim $TMPDIR/doc/extras/vim/ftdetect/
 install -p -m 0644 doc/extras/vim/syntax/clushconf.vim $TMPDIR/doc/extras/vim/syntax/
