@@ -1,3 +1,14 @@
+2012-02-18 S. Thiell <stephane.thiell@cea.fr>
+
+	* Packaging: Add groups.conf.d directory and sample files.
+
+2012-02-17 S. Thiell <stephane.thiell@cea.fr>
+
+	* CLI/Nodeset.py: Add support for -l[ll] <nodeset(s)> to list belonging
+	groups (CLI interface to NodeSet.groups()) (ticket #162).
+
+	* NodeSet: Add groups() public method to list groups nodeset belongs to.
+
 2012-02-15 S. Thiell <stephane.thiell@cea.fr>
 
 	* NodeUtils.py: Add groupsdir option (ticket #179).
